--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -111,34 +111,49 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-04">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-07">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-4-vpn-node.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 10月4日20.3M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                <a href="/free-nodes/2025-11-7-share-vpn.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 11月7日22.4M/S|免费VPN/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点免费节点订阅分享" src="/uploads/20241222-1/c3c6a54ea49b309f84ab33c220f79ae0.webp" class="img-responsive">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-4-vpn-node.htm" class="xcblog-blog-url">
+                                <a href="/free-nodes/2025-11-7-share-vpn.htm" class="xcblog-blog-url">
                                     <h3 class="xcblog-blog-title">
-                                        VPN设备 | 10月4日20.3M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享                                    </h3>
+                                        VPN设备 | 11月7日22.4M/S|免费VPN/Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点免费节点订阅分享                                    </h3>
                                 </a>
                                 <p>
-                                    这一次的节点更新覆盖了日本、新加坡、韩国、香港、欧洲、加拿大、美国等地区,最高速度可达20.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                                    这一次的节点更新覆盖了日本、欧洲、加拿大、香港、韩国、美国、新加坡等地区,最高速度可达22.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-03">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-06">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-3-top-vpn-node.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 10月3日20.2M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享" src="/uploads/20241222-1/253352ea5161b569846edfcc6423bfa1.webp" class="img-responsive">
+                                <a href="/free-nodes/2025-11-6-node-share.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 11月6日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点免费节点订阅分享" src="/uploads/20241222-1/c3c6a54ea49b309f84ab33c220f79ae0.webp" class="img-responsive">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-3-top-vpn-node.htm" class="xcblog-blog-url">
+                                <a href="/free-nodes/2025-11-6-node-share.htm" class="xcblog-blog-url">
                                     <h3 class="xcblog-blog-title">
-                                        VPN设备 | 10月3日20.2M/S|免费VPN/SSR节点/Singbox节点/Shadowrocket节点/Clash节点/V2ray节点免费节点订阅分享                                    </h3>
+                                        VPN设备 | 11月6日20.2M/S|免费VPN/Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点免费节点订阅分享                                    </h3>
                                 </a>
                                 <p>
-                                    这一次的节点更新覆盖了香港、日本、加拿大、新加坡、美国、欧洲、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                                    这一次的节点更新覆盖了欧洲、韩国、香港、美国、日本、加拿大、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-11-5-share-vpn.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 11月5日20.4M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点免费节点订阅分享" src="/uploads/20241222-1/3e06145ef3df4476540f41e96f63345f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-11-5-share-vpn.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 11月5日20.4M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、韩国、加拿大、新加坡、香港、美国、日本等地区,最高速度可达20.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
                         
@@ -151,16 +166,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-7-node-share-links.htm" title="VPN设备 | 10月7日20M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 10月7日20M/S|免费VPN/SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-12-vpn-github.htm" title="VPN设备 | 11月12日20.3M/S|免费VPN/SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点免费节点订阅分享">VPN设备 | 11月12日20.3M/S|免费VPN/SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-10-free-node-subscribe-links.htm" title="VPN设备 | 10月10日22.6M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享">VPN设备 | 10月10日22.6M/S|免费VPN/Shadowrocket节点/SSR节点/Singbox节点/Clash节点/V2ray节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-16-vpn-node.htm" title="VPN设备 | 10月16日20.8M/S|免费VPN/Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 10月16日20.8M/S|免费VPN/Singbox节点/Clash节点/SSR节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-27-mianfei-vpn.htm" title="VPN设备 | 11月27日21.5M/S|免费VPN/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点免费节点订阅分享">VPN设备 | 11月27日21.5M/S|免费VPN/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-11-free-vpn.htm" title="VPN设备 | 10月11日18M/S|免费VPN/SSR节点/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点免费节点订阅分享">VPN设备 | 10月11日18M/S|免费VPN/SSR节点/Shadowrocket节点/Clash节点/V2ray节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-3-vpn-github.htm" title="VPN设备 | 11月3日18.9M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点免费节点订阅分享">VPN设备 | 11月3日18.9M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-vpn-proxy.htm" title="VPN设备 | 10月15日21.5M/S|免费VPN/SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点免费节点订阅分享">VPN设备 | 10月15日21.5M/S|免费VPN/SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-5-share-vpn.htm" title="VPN设备 | 11月5日20.4M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点免费节点订阅分享">VPN设备 | 11月5日20.4M/S|免费VPN/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点/Clash节点免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-vpn-node.htm" title="VPN设备 | 10月4日20.3M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享">VPN设备 | 10月4日20.3M/S|免费VPN/V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-1-vpn-github.htm" title="VPN设备 | 1月1日18.7M/S|免费VPN/Clash节点/Singbox节点/SSR节点/V2ray节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 1月1日18.7M/S|免费VPN/Clash节点/Singbox节点/SSR节点/V2ray节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-20-node-share-links.htm" title="VPN设备 | 12月20日22.4M/S|免费VPN/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点免费节点订阅分享">VPN设备 | 12月20日22.4M/S|免费VPN/Singbox节点/V2ray节点/Clash节点/Shadowrocket节点/SSR节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2026-1-3-free-node-subscribe.htm" title="VPN设备 | 1月3日18.3M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 1月3日18.3M/S|免费VPN/Clash节点/V2ray节点/SSR节点/Singbox节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-5-free-node-subscribe-links.htm" title="VPN设备 | 12月5日21.1M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点免费节点订阅分享">VPN设备 | 12月5日21.1M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-10-free-node-subscribe.htm" title="VPN设备 | 11月10日22.9M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点免费节点订阅分享">VPN设备 | 11月10日22.9M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-31-vpn-node.htm" title="VPN设备 | 12月31日22.4M/S|免费VPN/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点免费节点订阅分享">VPN设备 | 12月31日22.4M/S|免费VPN/Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-23-share-vpn.htm" title="VPN设备 | 12月23日20M/S|免费VPN/Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点免费节点订阅分享">VPN设备 | 12月23日20M/S|免费VPN/Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-13-free-node-subscribe.htm" title="VPN设备 | 12月13日22.2M/S|免费VPN/Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点免费节点订阅分享">VPN设备 | 12月13日22.2M/S|免费VPN/Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-26-free-vpn-node.htm" title="VPN设备 | 12月26日18.3M/S|免费VPN/SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点免费节点订阅分享">VPN设备 | 12月26日18.3M/S|免费VPN/SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-12-16-node-share.htm" title="VPN设备 | 12月16日20.4M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点免费节点订阅分享">VPN设备 | 12月16日20.4M/S|免费VPN/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点/SSR节点免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -172,10 +187,13 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                     </ul>
     </div>
